fixing string builder

--- a/FishLampCodeGeneratorLib/CodeGenerator/CodeGeneratorSharedConfig.xcconfig
+++ b/FishLampCodeGeneratorLib/CodeGenerator/CodeGeneratorSharedConfig.xcconfig
@@ -3,6 +3,6 @@
 //  Copyright (c) 2012 GreenTongue Software. All rights reserved.
 //
 GCC_PRECOMPILE_PREFIX_HEADER = YES
-GCC_PREFIX_HEADER = CodeGenerator/CodeGenerator-Prefix.pch
+GCC_PREFIX_HEADER = ../Classes/FishLampCodeGenerator-Prefix.pch
 HEADER_SEARCH_PATHS= $(inherited) $(FISHLAMP_COCOA) ../Classes/**
 MACH_O_TYPE = staticlib
