--- a/FishLampCodeGeneratorLib/CodeGeneratorTest/CodeGeneratorTestSharedConfig.xcconfig
+++ b/FishLampCodeGeneratorLib/CodeGeneratorTest/CodeGeneratorTestSharedConfig.xcconfig
@@ -5,7 +5,7 @@
 #include "FishLampXcodeConfigs/FishLampIncludedConfig-TestTool.xcconfig"
 
 GCC_PRECOMPILE_PREFIX_HEADER = YES
-GCC_PREFIX_HEADER = CodeGeneratorTest/CodeGeneratorTest-Prefix.pch
+GCC_PREFIX_HEADER = ../Classes/FishLampCodeGenerator-Prefix.pch
 HEADER_SEARCH_PATHS= $(inherited) $(FISHLAMP_COCOA)
 
 
