--- a/Test-old/FishLampXcodeConfigs/FishLampIncludedConfig-Tool.xcconfig
+++ b/Test-old/FishLampXcodeConfigs/FishLampIncludedConfig-Tool.xcconfig
@@ -7,8 +7,8 @@
 //
 
 DEPLOYMENT_LOCATION = YES
-DSTROOT = /
-INSTALL_PATH = /usr/local/bin
+DSTROOT = ~/Library
+INSTALL_PATH = /FishLamp/Tests
 MACH_O_TYPE = mh_execute
 EXECUTABLE_EXTENSION = 
 
